--- a/wallpaper.html
+++ b/wallpaper.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12" style="text-align:right">
-                        <a href="https://kellypx.github.io/fmt__yutou/">
+                        <a href="https://fmtyutou.github.io/fmt__yutou/">
                             <img src="img/home.png" alt="home">
                         </a>
                     </div>
