--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
                                 <h5>芋頭</h5>
                             </div>
                             <div class="col-md-8 text-left">
-                                <p class="lead">【此頻道由鹿人本人經營】歡迎來到鹿人的新頻道！希望能帶給你們快樂！希望能讓大家每天都開開心心！如果喜歡我們的影片，請記得訂閱&開啟鈴鐺喲❤️</p>
+                                <p class="lead">這裡是來自台灣的芋頭，目前在繪畫的道路上努力中，如果喜歡我們的圖，請記得追蹤我們的粉專，多多支持✨</p>
                                 <p>合作請洽：lindakelly20210101@gmail.com</p>
                                 <p>快速洽詢：Instagram小盒子
                                     <span class="word">
                                         <a href="https://www.instagram.com/fmt__yutou/" target="_blank">@fmt__yutou</a>
                                     </span>
                                 </p>
+                                <p>小編及經營者：鵝仔，有任何問題或合作歡迎通過管道來詢問~同時我也是網站的設計者，有想設計模板的也歡迎詢問</p>
                                 <div class="row">
                                     <a href="https://www.instagram.com/fmt__yutou/" target="_blank"><img src="img/ig.png"></a>
                                     <a href="https://www.facebook.com/profile.php?id=100066576131200" target="_blank"><img src="img/facebook.png"></a>
