--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                         <a href="https://www.instagram.com/fmt__yutou/" target="_blank">@fmt__yutou</a>
                                     </span>
                                 </p>
-                                <p>小編及經營者：鵝仔，有任何問題或合作歡迎通過管道來詢問~同時我也是網站的設計者，有想設計模板的也歡迎詢問</p>
+                                <p>小編及經營者：鵝仔，同時我也是網站的設計者，有想設計模板的也歡迎詢問我們</p>
                                 <div class="row">
                                     <a href="https://www.instagram.com/fmt__yutou/" target="_blank"><img src="img/ig.png"></a>
                                     <a href="https://www.facebook.com/profile.php?id=100066576131200" target="_blank"><img src="img/facebook.png"></a>
